# AgentProPlus

./: .gitignore  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: main-checkpoint.py
agentpro/: __init__.py  agent.py  model.py  react_agent.py  tools.py
agentpro/.ipynb_checkpoints/: __init__-checkpoint.py  react_agent-checkpoint.py
agentpro/examples/: .envsample  Custool_Tool_Integration.ipynb  Gradio_Basic_Chatbot.ipynb  Quick_Start.ipynb  custool_tool (1).ipynb  custool_tool.ipynb  custool_tool_(2).ipynb  custool_tool_integration.ipynb  custool_tool_integration_(1).ipynb  example_usage.py  gradio_basic_chatbot.ipynb  quick_start.ipynb  quick_start_(1).ipynb
agentpro/examples/Traversaal x Optimized AI Hackathon 2025/Bloodcell/: README.md  app.py
agentpro/tools/: __init__.py  ares_tool.py  base.py  calculator_tool.py  code_tool.py  data_tool.py  duckduckgo_tool.py  slide_tool.py  traversaalpro_rag_tool.py  userinput_tool.py  yfinance_tool.py  youtube_tool.py
agentpro/tools/.ipynb_checkpoints/: __init__-checkpoint.py  ares_tool-checkpoint.py  base_tool-checkpoint.py  calculator_tool-checkpoint.py  duckduckgo_tool-checkpoint.py  slide_generation_tool-checkpoint.py  traversaalpro_rag_tool-checkpoint.py  yfinance_tool-checkpoint.py
agentproplus/: mcp_bridge.py  model.py  react_agent.py
agentproplus/tools/: __init__.py  mcp_tool.py
cookbook/: custool_tool.ipynb  quick_start.ipynb
cookbook/Traversaal x Optimized AI Hackathon 2025/Bloodcell/: README.md
(+3 files in other folders)
